Update azure-pipelines-CI.yml for Azure Pipelines

--- a/Pipelines/azure-pipelines-CI.yml
+++ b/Pipelines/azure-pipelines-CI.yml
@@ -43,4 +43,9 @@ steps:
     zipAfterPublish: True
 
     ## modifyOutputPath: false
+    ## this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)' 
+    artifactName: 'ProdMicroserviceArtfact'
   displayName: 'Publish ProductMicroservice'
