Update azure-pipelines-CI.yml for Azure Pipelines

--- a/Pipelines/azure-pipelines-CI.yml
+++ b/Pipelines/azure-pipelines-CI.yml
@@ -37,7 +37,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
-    publishWebProjects: true
+    publishWebProjects: false
     projects: '**/ProductMicroservice.csproj'
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
