--- a/Pipelines/azure-pipelines-CI.yml
+++ b/Pipelines/azure-pipelines-CI.yml
@@ -39,13 +39,8 @@ steps:
     command: 'publish'
     publishWebProjects: false
     projects: '**/ProductMicroservice.csproj'
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
+    arguments: '--configuration $(buildConfiguration) --no-restore'
 
-    ## modifyOutputPath: false
-    ## this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(Build.ArtifactStagingDirectory)' 
-    artifactName: 'ProdMicroserviceArtfact'
+    modifyOutputPath: false
   displayName: 'Publish ProductMicroservice'
+    
