--- a/Pipelines/azure-pipelines-CI.yml
+++ b/Pipelines/azure-pipelines-CI.yml
@@ -39,8 +39,22 @@ steps:
     command: 'publish'
     publishWebProjects: false
     projects: '**/ProductMicroservice.csproj'
-    arguments: '--configuration $(buildConfiguration) --no-restore'
-
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
     modifyOutputPath: false
   displayName: 'Publish ProductMicroservice'
+  
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)' 
+    artifactName: 'ProdMicroserviceArtfact'
+
+- task: DownloadBuildArtifacts@0
+  inputs: 
+    buildType: current
+    downloadType: single
+    downloadPath: '$(System.ArtifactDirectory)'
+    artifactName: 'ProdMicroservice'
+    
+  
     
