Update azure-pipelines-CI.yml for Azure Pipelines

--- a/Pipelines/azure-pipelines-CI.yml
+++ b/Pipelines/azure-pipelines-CI.yml
@@ -54,7 +54,7 @@ steps:
     buildType: current
     downloadType: single
     downloadPath: '$(System.ArtifactDirectory)'
-    ## artifactName: 'ProdMicroservice'
+    ## artifactName: 'drop'
     
   
     
