--- a/Pipelines/azure-pipelines-CI.yml
+++ b/Pipelines/azure-pipelines-CI.yml
@@ -37,21 +37,20 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
-    publishWebProjects: true
+    publishWebProjects: false
     projects: '**/ProductMicroservice.csproj'
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
     modifyOutputPath: false
   displayName: 'Publish ProductMicroservice'
+  condition: and(succeeded(), ne(variables['Build.Reason'],'PullRequest'))
   
-##- task: PublishPipelineArtifact@1
-##  inputs:
-##-    targetPath: '$(Build.ArtifactStagingDirectory)' 
- ##-   artifactName: 'ProdMicroserviceArtfact'
+
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: '$(Build.ArtifactStagingDirectory)'
     artifactName: ProdMicroserviceArtfact
+  displayName: 'PublishBuildArtifacts for ProductMicroservice'
 
 - task: DownloadBuildArtifacts@0
   inputs: 
@@ -59,6 +58,8 @@ steps:
     downloadType: 'single'
     artifactName: 'ProdMicroserviceArtfact'
     downloadPath: '$(System.ArtifactDirectory)'
+  displayName: 'DownloadBuildArtifacts for ProductMicroservice'
+
     
     
   
