--- a/ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj
+++ b/ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj
@@ -2,7 +2,7 @@
   
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerfileContext>..\..</DockerfileContext>
@@ -15,13 +15,13 @@
     <DocumentationFile>C:\Utvecklingprogram\Microservices\ProductMicroservice\ProductMicroservice\ProductMicroservice.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
     <Optimize>False</Optimize>
-    <OutputPath>bin\Debug\net6.0\</OutputPath>
+    <OutputPath>bin\Debug\net8.0\</OutputPath>
   </PropertyGroup>
 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>C:\Utvecklingprogram\Microservices\ProductMicroservice\ProductMicroservice\ProductMicroservice.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
     <Optimize>False</Optimize>
-    <OutputPath>bin\Release\net6.0\</OutputPath>
+    <OutputPath>bin\Release\net8.0\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,6 +40,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Kubernetes.Tools.Targets" Version="1.1.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
 
