changes in the new pc

--- a/ProductMicroservice/ProductMicroservice/appsettings.json
+++ b/ProductMicroservice/ProductMicroservice/appsettings.json
@@ -16,7 +16,9 @@
     // "ProductsDBConString": "Data Source=CND7496N83\\SQLEXPRESS; Initial Catalog=ProductsDB; Integrated Security=true; Persist Security Info=True",
 
     // this works with both ProductMicroservice and  docker-compose, IP Number is not static, you should check with configip to se the updated ipnumber.
-    "ProductsDBConString": "Data Source=192.168.1.150,1433; Database=ProductsDB; User ID=sa; Password=Helpdesk1111; MultipleActiveResultSets=true;Persist Security Info=True"
+    
+    // with change of PC just change the IP address
+    "ProductsDBConString": "Data Source=192.168.1.179,1433; Database=ProductsDB; User ID=sa; Password=Helpdesk1111; MultipleActiveResultSets=true;Persist Security Info=True"
   },
 
   "RabbitMq": {
