Adding ENV ASPNETCORE_HTTP_PORTS 80 for .NET8

--- a/ProductMicroservice/ProductMicroservice/Dockerfile
+++ b/ProductMicroservice/ProductMicroservice/Dockerfile
@@ -5,6 +5,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 1433
+# in .NET 8 you need to add the following line, other wise you shall get error :ocalhost didn’t send any data.ERR_EMPTY_RESPONSE
+ENV ASPNETCORE_HTTP_PORTS 80
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
